node-main/deps/v8/test/message/fail/call-non-constructable.out
# Copyright 2016 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:8: TypeError: unescape is not a constructor
new unescape();
^
TypeError: unescape is not a constructor
    at *%(basename)s:8:1
